@startuml

entity Course {
  - CourseId id
  - CourseName courseName
  - PositiveInteger maxRegisteredStudents
  - StudentId[] registeredStudents
  - Tutor[] tutors
  - Module[] modules
  + registerStudent(Student student)
  + addTutor(Tutor tutor()
}

entity Module {
  - ModuleId id
  - Lesson[] lessons
}

entity Lesson {
  - LessonId id
  - LessonName name
  - LessonDescription description
  - Content content
}

Course o-- Module
Module o-- Lesson

entity Student {
  - StudentId id
}
entity Tutor {
  - TutorId id
}

entity "User" {
  Email email
  Password password
  Roles[] roles
}

enum Roles {
MEMBER,
STUDENT,
TUTOR,
ADMIN
}

Roles o-- User

@enduml
